[platform ui] IJPL-45177 Find in Files: autoload results on scroll down
GitOrigin-RevId: 646f44b8c6b111b232dd4cd3132b62cb62c1d9f6