@@ -10,7 +10,6 @@ import com.intellij.find.FindModel;
 import com.intellij.find.FindSettings;
 import com.intellij.find.FindUsagesCollector;
 import com.intellij.find.SearchTextArea;
-import com.intellij.find.actions.ShowUsagesAction;
 import com.intellij.find.findInProject.FindInProjectScopeService;
 import com.intellij.find.replaceInProject.ReplaceInProjectManager;
 import com.intellij.icons.AllIcons;
@@ -62,10 +61,6 @@ import com.intellij.openapi.help.HelpManager;
 import com.intellij.openapi.keymap.Keymap;
 import com.intellij.openapi.keymap.KeymapManager;
 import com.intellij.openapi.keymap.KeymapUtil;
-import com.intellij.openapi.progress.ProgressIndicator;
-import com.intellij.openapi.progress.ProgressManager;
-import com.intellij.openapi.progress.Task;
-import com.intellij.openapi.progress.util.ProgressIndicatorBase;
 import com.intellij.openapi.project.DumbAwareAction;
 import com.intellij.openapi.project.DumbAwareToggleAction;
 import com.intellij.openapi.project.Project;
@@ -96,8 +91,6 @@ import com.intellij.openapi.wm.WindowManager;
 import com.intellij.openapi.wm.impl.IdeFrameImpl;
 import com.intellij.openapi.wm.impl.IdeGlassPaneEx;
 import com.intellij.pom.Navigatable;
-import com.intellij.psi.search.GlobalSearchScope;
-import com.intellij.reference.SoftReference;
 import com.intellij.ui.AnimatedIcon;
 import com.intellij.ui.BadgeIconSupplier;
 import com.intellij.ui.ColorUtil;
@@ -131,11 +124,9 @@ import com.intellij.ui.popup.list.SelectablePanel;
 import com.intellij.ui.render.RenderingUtil;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.table.JBTable;
-import com.intellij.usages.FindUsagesProcessPresentation;
 import com.intellij.usages.ItemWithLazyContent;
 import com.intellij.usages.TextChunk;
 import com.intellij.usages.Usage;
-import com.intellij.usages.UsageInfo2UsageAdapter;
 import com.intellij.usages.UsageInfoAdapter;
 import com.intellij.usages.UsageViewPresentation;
 import com.intellij.usages.impl.UsagePreviewPanel;
@@ -155,6 +146,8 @@ import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.StartupUiUtil;
 import com.intellij.util.ui.StatusText;
 import com.intellij.util.ui.UIUtil;
+import kotlin.Unit;
+import kotlin.jvm.functions.Function1;
 import net.miginfocom.swing.MigLayout;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Contract;
@@ -173,11 +166,14 @@ import javax.swing.JButton;
 import javax.swing.JCheckBox;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
+import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JRootPane;
+import javax.swing.JScrollBar;
 import javax.swing.JTable;
 import javax.swing.JTextArea;
 import javax.swing.JToggleButton;
+import javax.swing.JViewport;
 import javax.swing.KeyStroke;
 import javax.swing.ListSelectionModel;
 import javax.swing.RootPaneContainer;
@@ -191,8 +187,10 @@ import java.awt.BorderLayout;
 import java.awt.CardLayout;
 import java.awt.Color;
 import java.awt.Component;
+import java.awt.Container;
 import java.awt.Dialog;
 import java.awt.Dimension;
+import java.awt.FlowLayout;
 import java.awt.Font;
 import java.awt.Graphics;
 import java.awt.Graphics2D;
@@ -211,23 +209,14 @@ import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.io.File;
-import java.lang.ref.Reference;
-import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
-import java.util.Vector;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.regex.Pattern;
@@ -264,8 +253,6 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
   private JBLabel myOKHintLabel;
   private JBLabel myNavigationHintLabel;
   private Alarm mySearchRescheduleOnCancellationsAlarm;
-  private volatile ProgressIndicatorBase myResultsPreviewSearchProgress;
-
   private FindPopupHeader header;
   private final AtomicBoolean myCaseSensitiveState = new AtomicBoolean();
   private final AtomicBoolean myPreserveCaseState = new AtomicBoolean();
@@ -284,12 +271,9 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
   private JPanel myScopeDetailsPanel;
 
   private JBTable myResultsPreviewTable;
-  private DefaultTableModel myResultsPreviewTableModel;
   private SimpleColoredComponent myUsagePreviewTitle;
   private UsagePreviewPanel myUsagePreviewPanel;
   private DialogWrapper myDialog;
-  private int myLoadingHash;
-  private final AtomicBoolean myNeedReset = new AtomicBoolean(true);
   private String myUsagesCount;
   private String myFilesCount;
   private UsageViewPresentation myUsageViewPresentation;
@@ -302,6 +286,12 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
   private boolean mySuggestRegexHintForEmptyResults = true;
   private OnePixelSplitter myPreviewSplitter;
   private final BadgeIconSupplier filterIcon = new BadgeIconSupplier(AllIcons.General.Filter);
+
+  private JPanel myLoadMoreRow;
+  private JBScrollPane myResultsScrollPane;
+
+  // Owns the search-results loading chain
+  private FindPopupResultsAutoloadHandler myResultsAutoloadHandler;
 
   FindPopupPanel(@NotNull FindUIHelper helper) {
     myHelper = helper;
@@ -322,7 +312,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     };
 
     Disposer.register(myDisposable, () -> {
-      finishPreviousPreviewSearch();
+      if (myResultsAutoloadHandler != null) myResultsAutoloadHandler.cancel();
       if (mySearchRescheduleOnCancellationsAlarm != null) Disposer.dispose(mySearchRescheduleOnCancellationsAlarm);
       if (myUsagePreviewPanel != null) Disposer.dispose(myUsagePreviewPanel);
     });
@@ -599,6 +589,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
 
   private void initComponents() {
     AnAction myShowFilterPopupAction = new MyShowFilterPopupAction();
+    myResultsAutoloadHandler = new FindPopupResultsAutoloadHandler(new MySearchAutoloadHost());
     myFilterContextButton =
       new ActionButton(myShowFilterPopupAction, null, ActionPlaces.UNKNOWN,
                        ActionToolbar.DEFAULT_MINIMUM_BUTTON_SIZE) {
@@ -652,7 +643,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
       }
     }
 
-    myResetFiltersAction = DumbAwareAction.create(event -> resetAllFilters());
+    myResetFiltersAction = DumbAwareAction.create(_ -> resetAllFilters());
     myResetFiltersAction.registerCustomShortcutSet(new CustomShortcutSet(RESET_FILTERS), this);
 
     myOKButton = new JButton(FindBundle.message("find.popup.find.button"));
@@ -663,7 +654,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     myReplaceAllButton.setOpaque(false);
     myReplaceAllButton.addActionListener(_ -> doOK(false));
     myReplaceSelectedButton.setOpaque(false);
-    myReplaceSelectedButton.addActionListener(e -> {
+    myReplaceSelectedButton.addActionListener(_ -> {
       int rowToSelect = myResultsPreviewTable.getSelectionModel().getMinSelectionIndex();
       Map<Integer, Usage> usages = getSelectedUsages();
       if (usages == null) {
@@ -677,7 +668,12 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
             boolean success = ReplaceInProjectManager.getInstance(myProject)
               .replaceSingleUsage(entry.getValue(), myHelper.getModel(), Collections.emptySet());
             if (!success) return;
-            ((DefaultTableModel)myResultsPreviewTable.getModel()).removeRow(entry.getKey());
+            DefaultTableModel tableModel = (DefaultTableModel)myResultsPreviewTable.getModel();
+            Object removed = tableModel.getValueAt(entry.getKey(), 0);
+            if (removed instanceof FindPopupItem) {
+              myResultsAutoloadHandler.onRowRemoved((FindPopupItem)removed);
+            }
+            tableModel.removeRow(entry.getKey());
           }
           catch (FindManager.MalformedReplacementStringException ex) {
             if (!ApplicationManager.getApplication().isUnitTestMode()) {
@@ -734,8 +730,8 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
                      .registerCustomShortcutSet(new CustomShortcutSet(navigationKeyStrokes.toArray(Shortcut.EMPTY_ARRAY)), this);
     }
 
-    myResultsPreviewTableModel = createTableModel();
-    myResultsPreviewTable = new JBTable(myResultsPreviewTableModel) {
+    DefaultTableModel resultsPreviewTableModel = createTableModel();
+    myResultsPreviewTable = new JBTable(resultsPreviewTableModel) {
       @Override
       public Dimension getPreferredScrollableViewportSize() {
         return new Dimension(getWidth(), 1 + getRowHeight() * 4);
@@ -830,21 +826,21 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     }
 
     ActionListener helpAction = _ -> HelpManager.getInstance().invokeHelp("reference.dialogs.findinpath");
-    registerKeyboardAction(helpAction,KeyStroke.getKeyStroke(KeyEvent.VK_F1, 0),JComponent.WHEN_IN_FOCUSED_WINDOW);
-    registerKeyboardAction(helpAction,KeyStroke.getKeyStroke(KeyEvent.VK_HELP, 0),JComponent.WHEN_IN_FOCUSED_WINDOW);
+    registerKeyboardAction(helpAction, KeyStroke.getKeyStroke(KeyEvent.VK_F1, 0), WHEN_IN_FOCUSED_WINDOW);
+    registerKeyboardAction(helpAction, KeyStroke.getKeyStroke(KeyEvent.VK_HELP, 0), WHEN_IN_FOCUSED_WINDOW);
     KeymapManager keymapManager = KeymapManager.getInstance();
     Keymap activeKeymap = keymapManager != null ? keymapManager.getActiveKeymap() : null;
     if (activeKeymap != null) {
       ShortcutSet findNextShortcutSet = new CustomShortcutSet(activeKeymap.getShortcuts("FindNext"));
       ShortcutSet findPreviousShortcutSet = new CustomShortcutSet(activeKeymap.getShortcuts("FindPrevious"));
-      DumbAwareAction findNextAction = DumbAwareAction.create(event -> {
+      DumbAwareAction findNextAction = DumbAwareAction.create(_ -> {
         int selectedRow = myResultsPreviewTable.getSelectedRow();
         if (selectedRow >= 0 && selectedRow < myResultsPreviewTable.getRowCount() - 1) {
           myResultsPreviewTable.setRowSelectionInterval(selectedRow + 1, selectedRow + 1);
           ScrollingUtil.ensureIndexIsVisible(myResultsPreviewTable, selectedRow + 1, 1);
         }
       });
-      DumbAwareAction findPreviousAction = DumbAwareAction.create(event -> {
+      DumbAwareAction findPreviousAction = DumbAwareAction.create(_ -> {
         int selectedRow = myResultsPreviewTable.getSelectedRow();
         if (selectedRow > 0 && selectedRow <= myResultsPreviewTable.getRowCount() - 1) {
           myResultsPreviewTable.setRowSelectionInterval(selectedRow - 1, selectedRow - 1);
@@ -894,7 +890,28 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     myPreviewSplitter = new OnePixelSplitter(true, .33f);
     myPreviewSplitter.setSplitterProportionKey(SPLITTER_SERVICE_KEY);
     myPreviewSplitter.getDivider().setBackground(JBUI.CurrentTheme.Separator.color());
-    JBScrollPane scrollPane = new JBScrollPane(myResultsPreviewTable) {
+    myLoadMoreRow = createLoadMoreRow();
+    // JBTable.setFillsViewportHeight(true) only kicks in when the table is the direct
+    // viewport view. Wrapping it loses that behavior, which leaves a band of LAF
+    // background below the last row when results don't fill the viewport. Grow the
+    // wrapper to at least the viewport height so the table's CENTER region stretches
+    // and renders its own background instead.
+    JPanel scrollContent = new JPanel(new BorderLayout()) {
+      @Override
+      public Dimension getPreferredSize() {
+        Dimension pref = super.getPreferredSize();
+        Container parent = getParent();
+        if (parent instanceof JViewport && parent.getHeight() > pref.height) {
+          return new Dimension(pref.width, parent.getHeight());
+        }
+        return pref;
+      }
+    };
+    scrollContent.setOpaque(false);
+    scrollContent.add(myResultsPreviewTable, BorderLayout.CENTER);
+    scrollContent.add(myLoadMoreRow, BorderLayout.SOUTH);
+    scrollContent.setBackground(JBUI.CurrentTheme.Popup.BACKGROUND);
+    JBScrollPane scrollPane = new JBScrollPane(scrollContent) {
       @Override
       public Dimension getMinimumSize() {
         Dimension size = super.getMinimumSize();
@@ -903,6 +920,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
       }
     };
     myPreviewSplitter.setFirstComponent(scrollPane);
+    installLoadMoreScrollListener(scrollPane);
     JPanel bottomPanel = new JPanel(new MigLayout("flowx, ins 0 0 0 0, fillx, hidemode 3, gap 0"));
     myNewTabCheckbox = new JBCheckBox(FindBundle.message("find.open.in.new.tab.checkbox"), FindSettings.getInstance().isShowResultsInSeparateView());
     myNewTabCheckbox.setOpaque(false);
@@ -1092,55 +1110,15 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
 
   private @NotNull DefaultTableModel createTableModel() {
     DefaultTableModel model = new DefaultTableModel() {
-      private String firstResultPath;
-
-      private final Comparator<Vector<FindPopupItem>> COMPARATOR = (v1, v2) -> {
-        FindPopupItem u1 = v1.get(0);
-        FindPopupItem u2 = v2.get(0);
-        String u2Path = u2.getPath();
-        String u1Path = u1.getPath();
-        if (u1Path.equals(firstResultPath) && !u2Path.equals(firstResultPath)) return -1; // first result is always sorted first
-        if (!u1Path.equals(firstResultPath) && u2Path.equals(firstResultPath)) return 1;
-        int c = u1Path.compareTo(u2Path);
-        if (c != 0) return c;
-        c = Integer.compare(u1.getLine(), u2.getLine());
-        if (c != 0) return c;
-        return Integer.compare(u1.getNavigationOffset(), u2.getNavigationOffset());
-      };
-
       @Override
       public boolean isCellEditable(int row, int column) {
         return false;
       }
 
-      @SuppressWarnings({"UseOfObsoleteCollectionType", "unchecked", "rawtypes"})
       @Override
-      //Inserts search results in sorted order
+      // Delegates dedup + sorted insertion to the search executor.
       public void addRow(Object[] rowData) {
-        if (myNeedReset.compareAndSet(true, false)) {
-          dataVector.clear();
-          fireTableDataChanged();
-        }
-        Vector<FindPopupItem> v = (Vector)convertToVector(rowData);
-        if (dataVector.isEmpty()) {
-          addRow(v);
-          myResultsPreviewTable.getSelectionModel().setSelectionInterval(0, 0);
-          firstResultPath = v.get(0).getPath();
-        }
-        else {
-          int p = Collections.binarySearch((Vector<Vector<FindPopupItem>>)((Vector)dataVector), v, COMPARATOR);
-          if (p < 0) {
-            // only insert when not already present.
-            int row = -(p + 1);
-            insertRow(row, v);
-          } else {
-            removeRow(p);
-            insertRow(p, v);
-            if (p == 0) {
-              myResultsPreviewTable.getSelectionModel().setSelectionInterval(0, 0);
-            }
-          }
-        }
+        myResultsAutoloadHandler.handleIncomingRow(this, rowData);
       }
     };
 
@@ -1312,13 +1290,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     if (mySearchRescheduleOnCancellationsAlarm == null || mySearchRescheduleOnCancellationsAlarm.isDisposed()) return;
     updateControls();
     mySearchRescheduleOnCancellationsAlarm.cancelAllRequests();
-    mySearchRescheduleOnCancellationsAlarm.addRequest(() -> findSettingsChanged(checkModel), 100);
-  }
-
-  private void finishPreviousPreviewSearch() {
-    if (myResultsPreviewSearchProgress != null && !myResultsPreviewSearchProgress.isCanceled()) {
-      myResultsPreviewSearchProgress.cancel();
-    }
+    mySearchRescheduleOnCancellationsAlarm.addRequest(() -> myResultsAutoloadHandler.start(checkModel), 100);
   }
 
   @ApiStatus.Internal
@@ -1326,261 +1298,50 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     return mySelectedScope == scopeType;
   }
 
-  private void findSettingsChanged(boolean checkModel) {
-    FindModel previousModel = myHelper.myPreviousModel;
-    applyTo(myHelper.getModel());
-    FindModel findModel = new FindModel();
-    findModel.copyFrom(myHelper.getModel());
-    if (findModel.getStringToFind().contains("\n")) {
-      findModel.setMultiline(true);
-    }
-
-    if (checkModel && findModel.noRestartSearchNeeded(previousModel)) {
-      return;
-    }
-
-    if (isShowing()) {
-      ScrollingUtil.ensureSelectionExists(myResultsPreviewTable);
-    }
-    finishPreviousPreviewSearch();
-    mySearchRescheduleOnCancellationsAlarm.cancelAllRequests();
-
-    ValidationInfo backendValidation = backendValidator.runBackendValidation();
-    ValidationInfo result = backendValidation != null ? backendValidation : getValidationInfo(myHelper.getModel());
-    myOKButton.setEnabled(result == null);
-    myComponentValidator.updateInfo(result);
-
-    ProgressIndicatorBase progressIndicatorWhenSearchStarted = new ProgressIndicatorBase() {
-      @Override
-      public void stop() {
-        super.stop();
-        if (FindKey.isEnabled()) return;
-        int hashCode = System.identityHashCode(this);
-        searchStoppedProcessing(hashCode);
-      }
-    };
-    myResultsPreviewSearchProgress = progressIndicatorWhenSearchStarted;
-    int hash = System.identityHashCode(myResultsPreviewSearchProgress);
-
-    // Use previously shown usage files as hint for faster search and better usage preview performance if pattern length increased
-    Set<UsageInfoAdapter>  previousUsages = getPreviousUsages();
-
-    myHelper.myPreviousModel = myHelper.getModel().clone();
-
-    myReplaceAllButton.setEnabled(false);
-    myReplaceSelectedButton.setEnabled(false);
-    myReplaceSelectedButton.setText(FindBundle.message("find.popup.replace.selected.button", 0));
-
-    onStart(hash);
-    if (result != null && result.component != myReplaceComponent) {
-      onStop(hash, result.message);
-      reset();
-      return;
-    }
-
-    FindAndReplaceExecutor projectExecutor = FindAndReplaceExecutor.Companion.getInstance();
-    TableCellRenderer renderer = projectExecutor.createTableCellRenderer();
-    if (renderer == null) renderer = new UsageTableCellRenderer();
-    myResultsPreviewTable.getColumnModel().getColumn(0).setCellRenderer(renderer);
-
-    AtomicInteger resultsCount = new AtomicInteger();
-    AtomicLong startTime = new AtomicLong();
-    FindInProjectUtil.setupViewPresentation(myUsageViewPresentation, findModel);
-
-    ModalityState state = ModalityState.current();
-    Project project = myProject;
-    ProgressManager.getInstance().runProcessWithProgressAsynchronously(new Task.Backgroundable(
-      project, FindBundle.message("find.usages.progress.title")) {
-      @Override
-      public void run(@NotNull ProgressIndicator indicator) {
-        startTime.set(System.currentTimeMillis());
-        AtomicLong timeToFirstResult = new AtomicLong(-1);
-        GlobalSearchScope scope = FindKey.isEnabled()
-                                  ? null
-                                  : ReadAction.nonBlocking(() -> FindInProjectUtil.getGlobalSearchScope(project, myHelper.myPreviousModel))
-                                    .wrapProgress(indicator).executeSynchronously();
-        FindUsagesProcessPresentation processPresentation = FindInProjectUtil.setupProcessPresentation(myUsageViewPresentation);
-        ThreadLocal<Reference<FindPopupItem>> recentItemRef = new ThreadLocal<>();
-        Set<String> filePaths = ConcurrentHashMap.newKeySet();
-
-        projectExecutor.findUsages(project, myResultsPreviewSearchProgress, processPresentation, findModel, previousUsages,
-                                   !myResultsPreviewTable.isEmpty(), myDisposable, (adapter) -> {
-            ApplicationManager.getApplication().invokeLater(() -> {
-              if (!myPreviewUpdater.isDisposed()) {
-                Map<Integer, Usage> selectedUsages = getSelectedUsages();
-                if (selectedUsages != null && selectedUsages.containsValue(adapter)) {
-                  myPreviewUpdater.addRequest(updatePreviewRunnable, 50);
-                }
-              }
-            });
-          }, (usage) -> {
-          if (isCancelled()) {
-            onStop(hash);
-            return false;
-          }
-
-          if (resultsCount.getAndIncrement() >= ShowUsagesAction.getUsagesPageSize()) {
-            onStop(hash);
-            return false;
-          }
-          filePaths.add(usage.getPath());
-
-          FindPopupItem recentItem = SoftReference.dereference(recentItemRef.get());
-          FindPopupItem newItem;
-          boolean merged = !myHelper.isReplaceState() && recentItem != null && recentItem.getUsage().merge(usage);
-          if (!merged) {
-            if (usage instanceof UsageInfo2UsageAdapter && !FindKey.isEnabled()) {
-              ((UsageInfo2UsageAdapter)usage).updateCachedPresentation();
-            }
-
-            UsagePresentation usagePresentation = UsagePresentationProvider.getPresentation(usage, project, scope);
-            newItem = new FindPopupItem(usage, usagePresentation);
-          }
-          else {
-            // recompute presentation of a merged instance
-            UsageInfoAdapter recentItemUsage = recentItem.getUsage();
-            if (recentItemUsage instanceof UsageInfo2UsageAdapter && !FindKey.isEnabled()) {
-              ((UsageInfo2UsageAdapter)recentItemUsage).updateCachedPresentation();
-            }
-            UsagePresentation recentUsagePresentation = UsagePresentationProvider.getPresentation(recentItemUsage, project, scope);
-            newItem = recentItem.withPresentation(recentUsagePresentation);
-          }
-          recentItemRef.set(new WeakReference<>(newItem));
-
-          if (timeToFirstResult.get() == -1) {
-            long firstResultTime = System.currentTimeMillis() - startTime.get();
-            timeToFirstResult.set(firstResultTime);
-            FindUsagesCollector.recordFirstResultTime(firstResultTime);
-          }
-
-          ApplicationManager.getApplication().invokeLater(() -> {
-            if (isCancelled()) {
-              onStop(hash);
-              return;
-            }
-            myPreviewSplitter.getSecondComponent().setVisible(true);
-            DefaultTableModel model = (DefaultTableModel)myResultsPreviewTable.getModel();
-            model.addRow(new Object[]{newItem});
-            myCodePreviewComponent.setVisible(true);
-            if (model.getRowCount() == 1) {
-              myResultsPreviewTable.setRowSelectionInterval(0, 0);
-            }
-            int occurrences = resultsCount.get();
-            int filesWithOccurrences = filePaths.size();
-            myCodePreviewComponent.setVisible(occurrences > 0);
-            myReplaceAllButton.setEnabled(occurrences > 0);
-            myReplaceSelectedButton.setEnabled(occurrences > 0);
-
-            if (occurrences > 0) {
-              if (occurrences < ShowUsagesAction.getUsagesPageSize()) {
-                myUsagesCount = String.valueOf(occurrences);
-                myFilesCount = String.valueOf(filesWithOccurrences);
-                header.infoLabel.setText(FindBundle.message("message.matches.in.files", occurrences, filesWithOccurrences));
-              }
-              else {
-                myUsagesCount = occurrences + "+";
-                myFilesCount = filesWithOccurrences + "+";
-                header.infoLabel.setText(FindBundle.message("message.matches.in.files.incomplete", occurrences, filesWithOccurrences));
-              }
-            }
-            else {
-              header.infoLabel.setText("");
-            }
-          }, state);
-
-          return true;
-        }, () -> {
-          searchStoppedProcessing(myLoadingHash);
-          onFinish();
-          return null;
-        });
-      }
-
-      @Override
-      public void onCancel() {
-        if (isShowing() && progressIndicatorWhenSearchStarted == myResultsPreviewSearchProgress &&
-            !progressIndicatorWhenSearchStarted.isCanceled()) {
-          scheduleResultsUpdate();
-        }
-      }
-
-      boolean isCancelled() {
-        return progressIndicatorWhenSearchStarted != myResultsPreviewSearchProgress || progressIndicatorWhenSearchStarted.isCanceled();
-      }
-
-      @Override
-      public void onFinished() {
-        if (FindKey.isEnabled()) return;
-        onFinish();
-      }
-
-      public void onFinish() {
-        ApplicationManager.getApplication().invokeLater(() -> {
-          boolean isEmpty = resultsCount.get() == 0;
-
-          if (!isCancelled()) {
-            if (isEmpty) {
-              showEmptyText(FindBundle.message("message.nothingFound"), true);
-            }
-          }
-          FindUsagesCollector.recordSearchFinished(System.currentTimeMillis() - startTime.get(), resultsCount.get(), ShowUsagesAction.getUsagesPageSize());
-          onStop(hash);
-
-          if (FindKey.isEnabled()) {
-            myHelper.onSearchFinish(isEmpty ? 0 : myResultsPreviewTable.getRowCount());
-          }
-        }, state);
-      }
-    }, myResultsPreviewSearchProgress);
-  }
-
-  private void searchStoppedProcessing(int hashCode) {
-    onStop(hashCode);
-    ApplicationManager.getApplication().invokeLater(() -> {
-      if (myNeedReset.compareAndSet(true, false)) { //nothing is found, let's clear previous results
-        reset();
-      }
-    });
-  }
-
   public boolean isBackendValidationFinished() {
     return backendValidator.isFinished();
   }
 
-  private @NotNull Set<UsageInfoAdapter> getPreviousUsages() {
-    Set<UsageInfoAdapter> previousUsages = new LinkedHashSet<>();
+  private static @NotNull JPanel createLoadMoreRow() {
+    JPanel panel = new JPanel(new FlowLayout(FlowLayout.LEFT, 0, 4));
+    panel.setBackground(JBUI.CurrentTheme.Popup.BACKGROUND);
+    panel.setOpaque(true);
+    panel.setBorder(JBUI.Borders.emptyLeft(getRowTextLeftInset()));
+    panel.add(new JLabel(AnimatedIcon.Default.INSTANCE));
+    panel.setVisible(false);
+    return panel;
+  }
 
-    if (myHelper.myPreviousModel != null && myHelper.myPreviousModel.getStringToFind().length() < myHelper.getModel().getStringToFind().length()) {
-      DefaultTableModel previousModel = (DefaultTableModel)myResultsPreviewTable.getModel();
-      for (int i = 0, len = previousModel.getRowCount(); i < len; ++i) {
-        Object value = previousModel.getValueAt(i, 0);
-        if (value instanceof FindPopupItem) {
-          UsageInfoAdapter usage = ((FindPopupItem)value).getUsage();
-          previousUsages.add(usage);
-        }
+  private static int getRowTextLeftInset() {
+    Insets innerInsets = JBUI.CurrentTheme.Popup.Selection.innerInsets();
+    return innerInsets.left + JBUI.CurrentTheme.Popup.Selection.LEFT_RIGHT_INSET.get();
+  }
+
+  private void installLoadMoreScrollListener(@NotNull JBScrollPane scrollPane) {
+    myResultsScrollPane = scrollPane;
+    JScrollBar bar = scrollPane.getVerticalScrollBar();
+    bar.addAdjustmentListener(e -> {
+      int extent = bar.getModel().getExtent();
+      if (extent <= 0) return;
+      int yetToScroll = bar.getMaximum() - extent - e.getValue();
+      int viewportHeight = Math.max(scrollPane.getHeight(), 1);
+      if (yetToScroll < Math.max(viewportHeight / 2, 50)) {
+        myResultsAutoloadHandler.tryLoadMore();
       }
-    }
-    return previousUsages;
+    });
   }
 
-  private void applyValidationResult(ValidationInfo result, int hash) {
-    myOKButton.setEnabled(result == null);
-    myComponentValidator.updateInfo(result);
-    myReplaceAllButton.setEnabled(result == null);
-    myReplaceSelectedButton.setEnabled(result == null);
-
-    if (result != null && result.component != myReplaceComponent) {
-      onStop(hash, result.message);
-      reset();
+  private void updateInfoLabel(int occurrences, int filesWithOccurrences, boolean loadingMore) {
+    if (loadingMore) {
+      myUsagesCount = occurrences + "+";
+      myFilesCount = filesWithOccurrences + "+";
+      header.infoLabel.setText(FindBundle.message("message.matches.in.files.incomplete", occurrences, filesWithOccurrences));
     }
-  }
-
-  private void reset() {
-    ((DefaultTableModel)myResultsPreviewTable.getModel()).getDataVector().clear();
-    ((DefaultTableModel)myResultsPreviewTable.getModel()).fireTableDataChanged();
-    myResultsPreviewTable.getSelectionModel().clearSelection();
-    myPreviewSplitter.getSecondComponent().setVisible(false);
-    header.infoLabel.setText(null);
+    else {
+      myUsagesCount = String.valueOf(occurrences);
+      myFilesCount = String.valueOf(filesWithOccurrences);
+      header.infoLabel.setText(FindBundle.message("message.matches.in.files", occurrences, filesWithOccurrences));
+    }
   }
 
   private void showEmptyText(@NlsContexts.StatusText @NotNull String message, boolean isFinish) {
@@ -1600,7 +1361,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
       dotAdded = true;
       emptyText.appendSecondaryText(FindBundle.message("find.recursively.hint"),
                                     LINK_PLAIN_ATTRIBUTES,
-                                    e -> {
+                                    _ -> {
                                       model.setWithSubdirectories(true);
                                       scheduleResultsUpdate();
                                     });
@@ -1670,7 +1431,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
                              _ -> resetAllFilters()).appendText(" " + getOptionText(myResetFiltersAction, true));
       }
       else {
-        Object option = usedOptions.get(0);
+        Object option = usedOptions.getFirst();
         emptyText.appendLine(FindBundle.message("message.nothingFound.used.option", getOptionText(option, false)));
         emptyText.appendLine(FindBundle.message("message.nothingFound.clearOption"), LINK_PLAIN_ATTRIBUTES,
                              _ -> resetAllFilters()).appendText(" " + getOptionText(myResetFiltersAction, true));
@@ -1726,39 +1487,6 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     }
   }
 
-  private void onStart(int hash) {
-    myNeedReset.set(true);
-    myLoadingHash = hash;
-    header.loadingIcon.setIcon(AnimatedIcon.Default.INSTANCE);
-    myResultsPreviewTable.getEmptyText().setText(FindBundle.message("empty.text.searching"));
-  }
-
-
-  private void onStop(int hash) {
-    onStop(hash, FindBundle.message("message.nothingFound"));
-  }
-
-  private void onStop(int hash, @NotNull String message) {
-    if (hash != myLoadingHash) {
-      return;
-    }
-
-    UIUtil.invokeLaterIfNeeded(() -> {
-      if (hash != myLoadingHash) {
-        return;
-      }
-      myLoadingHash = 0;
-
-      showEmptyText(message, false);
-      if (backendValidator.isFinished) {
-        header.loadingIcon.setIcon(EmptyIcon.ICON_16);
-      }
-
-      if (!FindKey.isEnabled()) {
-        myHelper.onSearchFinish(myResultsPreviewTable.getRowCount());
-      }
-    });
-  }
 
   @Override
   public @Nullable String getFileTypeMask() {
@@ -1937,7 +1665,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
                                                           ActionButtonLook look,
                                                           @NotNull String place,
                                                           @NotNull Presentation presentation,
-                                                          Supplier<? extends @NotNull Dimension> minimumSize) {
+                                                          @NotNull Supplier<? extends @NotNull Dimension> minimumSize) {
         if (!ExperimentalUI.isNewUI()) {
           return super.createToolbarButton(action, look, place, presentation, minimumSize);
         }
@@ -2031,6 +1759,175 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
 
   public enum ToggleOptionName {CaseSensitive, PreserveCase, WholeWords, Regex, FileFilter}
 
+  /**
+   * UI side of the {@link FindPopupResultsAutoloadHandler.Host} contract.
+   * The executor calls these to drive the panel; the panel never reaches into the executor's internals.
+   */
+  private final class MySearchAutoloadHost implements FindPopupResultsAutoloadHandler.Host {
+    @Override public @NotNull Project getProject() { return myProject; }
+    @Override public @NotNull FindUIHelper getHelper() { return myHelper; }
+    @Override public @NotNull Disposable getDisposable() { return myDisposable; }
+
+    @Override public int getResultsRowCount() { return myResultsPreviewTable.getRowCount(); }
+    @Override public boolean isShowing() { return FindPopupPanel.this.isShowing(); }
+    @Override public boolean isDialogVisible() { return myDialog != null && myDialog.isVisible(); }
+
+    @Override
+    public boolean isContentFullyVisible() {
+      if (myResultsScrollPane == null) return false;
+      int viewportHeight = myResultsScrollPane.getViewport().getExtentSize().height;
+      if (viewportHeight <= 0) return false;
+      int contentHeight = myResultsPreviewTable.getPreferredSize().height;
+      return contentHeight <= viewportHeight;
+    }
+
+    @Override
+    public boolean isUserAtBottom() {
+      if (myResultsScrollPane == null) return false;
+      JScrollBar bar = myResultsScrollPane.getVerticalScrollBar();
+      int extent = bar.getModel().getExtent();
+      if (extent <= 0) return false;
+      int yetToScroll = bar.getMaximum() - extent - bar.getValue();
+      int viewportHeight = Math.max(myResultsScrollPane.getHeight(), 1);
+      return yetToScroll < Math.max(viewportHeight / 2, 50);
+    }
+
+    @Override public @Nullable FindModel getPreviousModel() { return myHelper.myPreviousModel; }
+    @Override public void rememberPreviousModel(@NotNull FindModel model) { myHelper.myPreviousModel = model; }
+    @Override public void applyCurrentSettingsTo(@NotNull FindModel model) { applyTo(model); }
+
+    @Override
+    public @Nullable ValidationInfo validate(@NotNull FindModel model) {
+      ValidationInfo backendValidation = backendValidator.runBackendValidation();
+      return backendValidation != null ? backendValidation : getValidationInfo(model);
+    }
+
+    @Override
+    public void applyValidationResult(@Nullable ValidationInfo info) {
+      myOKButton.setEnabled(info == null);
+      myComponentValidator.updateInfo(info);
+      myReplaceAllButton.setEnabled(info == null);
+      myReplaceSelectedButton.setEnabled(info == null);
+    }
+
+    @Override
+    public boolean isValidationOnReplaceComponent(@NotNull ValidationInfo info) {
+      return info.component == myReplaceComponent;
+    }
+
+    @Override
+    public void refreshTableRenderer() {
+      TableCellRenderer renderer = FindAndReplaceExecutor.getInstance().createTableCellRenderer();
+      if (renderer == null) renderer = new UsageTableCellRenderer();
+      myResultsPreviewTable.getColumnModel().getColumn(0).setCellRenderer(renderer);
+    }
+
+    @Override public @NotNull UsageViewPresentation getUsageViewPresentation() { return myUsageViewPresentation; }
+
+    @Override
+    public void onSearchStarted(boolean loadMore) {
+      header.loadingIcon.setIcon(AnimatedIcon.Default.INSTANCE);
+      myResultsPreviewTable.getEmptyText().setText(FindBundle.message("empty.text.searching"));
+      if (!loadMore) {
+        myReplaceAllButton.setEnabled(false);
+        myReplaceSelectedButton.setEnabled(false);
+        myReplaceSelectedButton.setText(FindBundle.message("find.popup.replace.selected.button", 0));
+      }
+    }
+
+    @Override
+    public void onPassStopped(@NotNull String message) {
+      showEmptyText(message, false);
+      if (backendValidator.isFinished) {
+        header.loadingIcon.setIcon(EmptyIcon.ICON_16);
+      }
+      if (!FindKey.isEnabled()) {
+        myHelper.onSearchFinish(myResultsPreviewTable.getRowCount());
+      }
+    }
+
+    @Override
+    public void appendIncomingRow(@NotNull FindPopupItem item) {
+      myPreviewSplitter.getSecondComponent().setVisible(true);
+      ((DefaultTableModel)myResultsPreviewTable.getModel()).addRow(new Object[]{item});
+      myCodePreviewComponent.setVisible(true);
+      int rowCount = myResultsPreviewTable.getRowCount();
+      myReplaceAllButton.setEnabled(rowCount > 0);
+      myReplaceSelectedButton.setEnabled(rowCount > 0);
+    }
+
+    @Override
+    public void onFirstRowAdded() {
+      myResultsPreviewTable.getSelectionModel().setSelectionInterval(0, 0);
+    }
+
+    @Override
+    public void selectFirstRow() {
+      myResultsPreviewTable.getSelectionModel().setSelectionInterval(0, 0);
+    }
+
+    @Override
+    public void schedulePreviewUpdateIfSelected(@NotNull UsageInfoAdapter adapter) {
+      if (myPreviewUpdater.isDisposed()) return;
+      Map<Integer, Usage> selectedUsages = getSelectedUsages();
+      if (selectedUsages != null && selectedUsages.containsValue(adapter)) {
+        myPreviewUpdater.addRequest(updatePreviewRunnable, 50);
+      }
+    }
+
+    @Override
+    public void forEachVisibleRowItem(@NotNull Function1<? super FindPopupItem, Unit> action) {
+      DefaultTableModel model = (DefaultTableModel)myResultsPreviewTable.getModel();
+      for (int i = 0, len = model.getRowCount(); i < len; ++i) {
+        Object value = model.getValueAt(i, 0);
+        if (value instanceof FindPopupItem) action.invoke((FindPopupItem)value);
+      }
+    }
+
+    @Override
+    public void updateInfoLabel(int occurrences, int files, boolean loadingMore) {
+      if (occurrences <= 0) {
+        header.infoLabel.setText("");
+        return;
+      }
+      FindPopupPanel.this.updateInfoLabel(occurrences, files, loadingMore);
+    }
+
+    @Override
+    public void showEmptyText(@NotNull String message, boolean isFinish) {
+      FindPopupPanel.this.showEmptyText(message, isFinish);
+    }
+
+    @Override
+    public void resetUi() {
+      ((DefaultTableModel)myResultsPreviewTable.getModel()).getDataVector().clear();
+      ((DefaultTableModel)myResultsPreviewTable.getModel()).fireTableDataChanged();
+      myResultsPreviewTable.getSelectionModel().clearSelection();
+      myPreviewSplitter.getSecondComponent().setVisible(false);
+      header.infoLabel.setText(null);
+    }
+
+    @Override
+    public void onLoadingRowVisibilityRequest(boolean visible) {
+      if (myLoadMoreRow != null) myLoadMoreRow.setVisible(visible);
+    }
+
+    @Override
+    public void cancelPendingScheduleRequests() {
+      mySearchRescheduleOnCancellationsAlarm.cancelAllRequests();
+    }
+
+    @Override
+    public void scheduleResultsUpdate() {
+      FindPopupPanel.this.scheduleResultsUpdate();
+    }
+
+    @Override
+    public void ensureSelectionExists() {
+      ScrollingUtil.ensureSelectionExists(myResultsPreviewTable);
+    }
+  }
+
   private final class BackendValidator {
     private @NotNull FindModel model = new FindModel();
     private boolean isFinished = true;
@@ -2081,8 +1978,8 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
         setDirectoryExists(isDirectoryExists);
         ApplicationManager.getApplication().invokeLater(() -> {
           if (!isDirectoryExists) {
-            applyValidationResult(evaluateValidationInfo(isDirectoryExists), myLoadingHash);
-            finishPreviousPreviewSearch();
+            myResultsAutoloadHandler.applyBackendValidationResult(evaluateValidationInfo(isDirectoryExists));
+            myResultsAutoloadHandler.cancel();
           }
           else {
             scheduleResultsUpdate();
@@ -2190,6 +2087,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     private final FindPopupScopeUI.ScopeType myScope;
 
     MySelectScopeToggleAction(@NotNull FindPopupScopeUI.ScopeType scope) {
+      //noinspection DialogTitleCapitalization
       super(scope.textComputable.get(), null, scope.icon);
       getTemplatePresentation().setHoveredIcon(scope.icon);
       getTemplatePresentation().setDisabledIcon(scope.icon);
@@ -2349,7 +2247,7 @@ public final class FindPopupPanel extends JBPanel<FindPopupPanel> implements Fin
     }
 
     @Override
-    public AccessibleContext getAccessibleContext() {
+    public @NotNull AccessibleContext getAccessibleContext() {
       if (accessibleContext == null) {
         accessibleContext = new AccessibleJPanel() {
           @Override
